--- a/7.分布式训练.ipynb
+++ b/7.分布式训练.ipynb
@@ -556,7 +556,7 @@
     "# 2.torch.nn.parallel.DistributedDataParallel(DDP)分布式训练\n",
     "# 每个gpu对应一个进程\n",
     "# ring all-reduce算法（百度提出）：保证GPU之间model和optimizer同步一致。所有的GPU连成一个ring，不需要等待所有卡计算完一轮。分布式同步。\n",
-    "# 算法本质是充分利用带宽，每部分都要走一圈ring，错开走。任意两个GPU之间每步只传一部分。\n",
+    "# 算法本质是充分利用带宽，每部分都要走一圈ring，错开走。ring上相邻两个GPU之间每步只传一部分。\n",
     "# 参数：world_size, ranks值范围为[0,world_size-1], local_rank\n",
     "# 需要定义DistributedDataParallel和DistributedSampler\n"
    ],
